<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tistory.quinoa.coinanalyzer.SettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SettingsAct_LangSetting_tv_Title"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SettingsAct_LangSetting_tv_Desc"/>
    <Button
        android:id="@+id/bt_langsetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SettingsAct_LangSetting_bt"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SettingsAct_Feedback_tv_Title"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SettingsAct_Feedback_tv_Desc"/>
    <Button
        android:id="@+id/bt_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SettingsAct_Feedback_bt"
        />

</LinearLayout>
